add vgg Performance Eval

--- a/fundusImage_classification_VGG16.ipynb
+++ b/fundusImage_classification_VGG16.ipynb
@@ -474,26 +474,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
-    "\n",
-    "# classification_report 출력\n",
-    "target_names = class_names  # 각 클래스의 이름\n",
-    "print(classification_report(y_true, y_pred, target_names=target_names))\n",
-    "\n",
-    "# confusion_matrix 출력\n",
-    "cm = confusion_matrix(y_true, y_pred)\n",
-    "print(\"Confusion Matrix:\")\n",
-    "print(cm, '\\n')\n",
-    "\n",
-    "# accuracy_score 출력\n",
-    "accuracy = accuracy_score(y_true, y_pred)\n",
-    "print(f\"Accuracy: {accuracy * 100:.2f}%\")"
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, cohen_kappa_score"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-10-05T05:36:52.793596Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -501,22 +485,114 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "\n",
-    "tf.keras.utils.plot_model(model, show_shapes=True, show_layer_names=True)"
+    "accuracy = accuracy_score(y_true, y_pred)\n",
+    "print(f\"Multi-Class Accuracy: {accuracy * 100:.2f}%\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-10-05T05:36:52.794704Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# classification_report 출력\n",
+    "target_names = class_names\n",
+    "print(\"Classification Report\")\n",
+    "print(classification_report(y_true, y_pred, target_names=target_names))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Multi-Confusion matrix\n",
+    "<img src = \"https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FYz4fi%2Fbtqyd71KPB4%2F5B95l7uJvIT8eheYMyd2A1%2Fimg.png\" width = \"1000\" height = \"606\">"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# confusion_matrix 출력\n",
+    "cm = confusion_matrix(y_true, y_pred)\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(cm, '\\n')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\", cbar=False)\n",
+    "plt.xlabel(\"Predicted Labels\")\n",
+    "plt.ylabel(\"True Labels\")\n",
+    "plt.title(\"Multi-Class Confusion Matrix\")\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 카파 통계량 계산\n",
+    "kappa = cohen_kappa_score(y_true, y_pred)\n",
+    "\n",
+    "print(f'Cohen\\'s Kappa: {kappa:.4f}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "---"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# import tensorflow as tf\n",
+    "# \n",
+    "# tf.keras.utils.plot_model(model, show_shapes=True, show_layer_names=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from torchsummary import summary\n",
+    "\n",
+    "summary(model, (3, 224, 224))"
+   ],
    "metadata": {
     "collapsed": false
    }
